<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dialog_new_game"
        android:gravity="center"
        android:layout_gravity="center"
        android:padding="10dp"
        />
    
    <RadioGroup
        android:id="@+id/rg_new_game"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RadioButton
            android:id="@+id/rb_new_game_easy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dialog_new_game_easy"/>

        <RadioButton
            android:id="@+id/rb_new_game_intermediate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dialog_new_game_intermediate"/>

        <RadioButton
            android:id="@+id/rb_new_game_hard"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dialog_new_game_hard"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/rb_new_game_custom"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dialog_new_game_custom"/>
        </LinearLayout>

    </RadioGroup>
    
    <Button
        android:id="@+id/b_new_game"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dialog_button_new_game"
        android:clickable="true"
        android:layout_gravity="center"/>

</LinearLayout>